Added a note on compiling for .NET 6.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -29,7 +29,7 @@
                 IsEnabled="{Binding IsCommandNotBusy}" >
             <DockPanel Background="{StaticResource ShazamThemeBrush}">
                 <ui:SimpleStackPanel DockPanel.Dock="Left" Orientation="Horizontal">
-                    <TextBlock Text="C# WPF Shazam - Identify songs like the popular mobile app Shazam and save song info with lyrics in MySQL database" FontSize="20" FontWeight="SemiBold" Background="Transparent"
+                    <TextBlock Text="C# WPF Shazam - Identify songs like the popular mobile app Shazam and save song info in MySQL database" FontSize="20" FontWeight="SemiBold" Background="Transparent"
                                 HorizontalAlignment="Left" VerticalAlignment="Center" Margin="15,0,0,0" />
                 </ui:SimpleStackPanel>
             </DockPanel>
