--- a/ShazamUserControl.xaml
+++ b/ShazamUserControl.xaml
@@ -12,18 +12,21 @@
             <RowDefinition Height="*" MinHeight="230" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200" />
+            <ColumnDefinition Width="290" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Column="0" Orientation="Horizontal">
+            <Button Content="Add" ToolTip="Add newly identified song info to MySQL DB"                            
+                    Command="{Binding AddMySQLCommand}" IsEnabled="{Binding IsAddMySQLEnabled}"
+                    Style="{StaticResource ShazamButtonStyle}" Margin="15,15,0,0" />
             <Button Content="Open in Browser" ToolTip="Open current video with default external browser"                            
                             Command="{Binding OpenInExternalBrowserCommand}" 
-                            Style="{StaticResource ShazamButtonStyle}" Margin="15,15,0,0" />
+                            Style="{StaticResource ShazamButtonStyle}" Margin="20,15,0,0" />
         </StackPanel>
         <!--UpdateSourceTrigger=PropertyChanged needed for KeyBinding to work. No 'Go' button in xaml.-->
         <TextBox Grid.Column="1" Text="{Binding CurrentVideoUri, UpdateSourceTrigger=PropertyChanged}" 
-                        Height="36" FontSize="16" Margin="2,10,15,10">
+                        Height="36" FontSize="16" Margin="0,10,15,10">
             <TextBox.InputBindings>
                 <KeyBinding Command="{Binding GoVideoUrlCommand}" Key="Enter" />
             </TextBox.InputBindings>
