--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -19,13 +19,9 @@
             <RowDefinition Height="70" />
             <RowDefinition Height="*" MinHeight="230" />
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" MinWidth="400" />
-            <ColumnDefinition Width="400" MinWidth="60" />
-        </Grid.ColumnDefinitions>
 
         <!--Top app bar area-->
-        <Border Grid.Row="0" Grid.ColumnSpan="2" BorderThickness="0,0,0,1" BorderBrush="Black" 
+        <Border Grid.Row="0" BorderThickness="0,0,0,1" BorderBrush="Black" 
                 IsEnabled="{Binding IsCommandNotBusy}" >
             <DockPanel Background="{StaticResource ShazamThemeBrush}">
                 <ui:SimpleStackPanel DockPanel.Dock="Left" Orientation="Horizontal">
@@ -76,52 +72,107 @@
             </Grid>
         </Border>
 
-        <TabControl x:Name="TabControlName" Grid.Row="2" Background="LightGray">
-            <TabItem BorderThickness="1,1,1,0" BorderBrush="Gray">
-                <TabItem.Header>
-                    <TextBlock Text="Shazam" Margin="6,2" />
-                </TabItem.Header>
-                <local:ShazamUserControl DataContext="{Binding .}" />
-            </TabItem>
-            <TabItem BorderThickness="1,1,1,0" BorderBrush="Gray">
-                <TabItem.Header>
-                    <TextBlock Text="MySQL" Margin="6,2" />
-                </TabItem.Header>
-                <local:MySQLUserControl DataContext="{Binding .}" />
-            </TabItem>
-        </TabControl>
-
-        <!--Song info at row 2 & col 1-->
-        <Grid Grid.Row="2" Grid.RowSpan="2" Grid.Column="1" Background="#EDEDED">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="115"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+        <!--Tab control and song info section-->
+        <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" MinWidth="400" />
+                <!--Must be Auto and no MinWidth for Expand/Collapse button to work-->
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
+                <!--Expander-->
+                <ColumnDefinition Width="18" />
             </Grid.ColumnDefinitions>
 
-            <Image Grid.Column="0" Visibility="{Binding SongCoverVisibility}" Source="{Binding SongCoverUrl, TargetNullValue={x:Null}}"                                             
-                    MaxHeight="100" VerticalAlignment="Top" Margin="10,7,0,0" />
-            <TextBlock Grid.Column="1" Text="{Binding SongInfoText}" TextWrapping="Wrap" Foreground="Navy" 
-                        FontSize="18" FontWeight="SemiBold" Padding="0,5,0,2" Margin="10,0" />
-            <DockPanel Grid.Row="1" Grid.ColumnSpan="2" Margin="3,5,3,0">
-                <Label Content="Lyrics" Foreground="Navy" FontSize="20" FontWeight="SemiBold" Margin="10,3,0,0" />
-                <ui:AppBarButton Icon="Copy" HorizontalAlignment="Left" ToolTip="Copy song info to clipboard" Width="30"
-                                 Command="{Binding CopySongInfoCommand}" Margin="5,-2,0,0" />
-            </DockPanel>
-            <Border Grid.Row="2" Grid.ColumnSpan="2" BorderThickness="0,1,0,0" BorderBrush="Black" Margin="8,5,5,5">
-                <ScrollViewer>
-                    <TextBlock Text="{Binding SongLyrics}" VerticalAlignment="Top" 
-                               FontSize="18" FontWeight="SemiBold" TextWrapping="Wrap" Padding="1" Margin="5" />
-                </ScrollViewer>
-            </Border>
-        </Grid>
+            <!--Tab control-->
+            <TabControl x:Name="TabControlName" Grid.Column="0" Background="LightGray">
+                <TabItem BorderThickness="1,1,1,0" BorderBrush="Gray">
+                    <TabItem.Header>
+                        <TextBlock Text="Shazam" Margin="6,2" />
+                    </TabItem.Header>
+                    <local:ShazamUserControl DataContext="{Binding .}" />
+                </TabItem>
+                <TabItem BorderThickness="1,1,1,0" BorderBrush="Gray">
+                    <TabItem.Header>
+                        <TextBlock Text="MySQL" Margin="6,2" />
+                    </TabItem.Header>
+                    <local:MySQLUserControl DataContext="{Binding .}" />
+                </TabItem>
+            </TabControl>
 
-        <!--Vertical splitter-->
-        <GridSplitter Grid.Row="2" Grid.RowSpan="2" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="4" 
-                        Background="{StaticResource ShazamThemeBrush}" Margin="0"/>
+            <!--Song info (MaxWidth below is the actual width because of SongInfoSectionVisibility)-->
+            <Border Grid.Column="1" Visibility="{Binding SongInfoSectionVisibility}" 
+                    BorderThickness="3,0,0,0" BorderBrush="{StaticResource ShazamThemeBrush}" >
+                <Grid MaxWidth="360" Background="#EDEDED">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="115"/>
+                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Image Visibility="{Binding SongCoverVisibility}" Source="{Binding SongCoverUrl, TargetNullValue={x:Null}}"                                             
+                        MaxHeight="100" VerticalAlignment="Top" Margin="10,7,0,0" />
+                    <TextBlock Grid.Column="1" Text="{Binding SongInfoText}" TextWrapping="Wrap" Foreground="Navy" 
+                        FontSize="18" FontWeight="SemiBold" Padding="0,5,0,2" Margin="10,0" />
+                    <DockPanel Grid.Row="1" Grid.ColumnSpan="2" Margin="3,5,3,0">
+                        <Label Content="Lyrics" Foreground="Navy" FontSize="20" FontWeight="SemiBold" Margin="10,3,0,0" />
+                        <ui:AppBarButton Icon="Copy" HorizontalAlignment="Left" ToolTip="Copy song info to clipboard" Width="30"
+                                 Command="{Binding CopySongInfoCommand}" Margin="5,-2,0,0" />
+                    </DockPanel>
+                    <Border Grid.Row="2" Grid.ColumnSpan="2" BorderThickness="0,1,0,0" BorderBrush="Black" Margin="8,5,5,5">
+                        <ScrollViewer>
+                            <TextBlock Text="{Binding SongLyrics}" VerticalAlignment="Top" 
+                               FontSize="18" FontWeight="SemiBold" TextWrapping="Wrap" Padding="1" Margin="5" />
+                        </ScrollViewer>
+                    </Border>
+                </Grid>
+            </Border>
+
+            <!--Expand/Collapse button on right side for song info Pane (2023-10-20: can't have GridSplitter with this)-->
+            <Grid Grid.Column="2" Background="LightGray">
+                <Button BorderBrush="LightGray" BorderThickness="1,0,0,0"
+                        Command="{Binding ExpandOrCollapseSongInfoSectionCommand}" ToolTip="Expand / Collapse song info pane"
+                        Height="50" Background="Transparent" Margin="5,0,0,0">
+                    <Button.Resources>
+                        <Polygon x:Key="PolygonRight" Points="0,0,0,40,10,20" Fill="#1e70ca" Margin="0,0,3,0" />
+                        <Polygon x:Key="PolygonLeft" Points="10,0,10,40,0,20" Fill="#1e70ca" Margin="0,0,3,0"/>
+                        <SolidColorBrush x:Key="MouseOverBackground" Color="Red"/>
+                    </Button.Resources>
+                    <Button.Style >
+                        <Style TargetType="{x:Type Button}">
+                            <!--Make background transparent (TemplateBinding). See comments on Button style in app.xaml.-->
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border Background="{TemplateBinding Background}">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
+                                    <Setter Property="RenderTransform">
+                                        <Setter.Value>
+                                            <ScaleTransform ScaleX="1.4" ScaleY="1.4"/>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Trigger>
+                                <DataTrigger Binding="{Binding SongInfoSectionVisibility}" Value="Visible">
+                                    <Setter Property="Content" Value="{StaticResource PolygonRight}"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding SongInfoSectionVisibility}" Value="Collapsed">
+                                    <Setter Property="Content" Value="{StaticResource PolygonLeft}"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+            </Grid>
+
+        </Grid>
     </Grid>
 </Window>
