--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -49,7 +49,7 @@
                             ItemsSource="{Binding DeviceSettingList}" SelectedItem="{Binding SelectedDeviceSetting}"                            
                             ToolTip="Hint: select a device with 'speaker' or 'microphone'"  Margin="15,2,0,5" />
                 <ui:AppBarButton Grid.Column="2" Icon="Refresh" ToolTip="Reload device list" 
-                                 Command="{Binding ReloadAndRebindCommand}" IsEnabled="{Binding IsCommandNotBusy}"
+                                 Command="{Binding ReloadDeviceListCommand}" IsEnabled="{Binding IsCommandNotBusy}"
                                  Width="40" Height="40" FontWeight="SemiBold" Margin="5,0,0,0"/>
                 <!--StatusMessage-->
                 <StackPanel Grid.Column="3" Orientation="Horizontal">
@@ -84,13 +84,13 @@
 
             <!--Tab control-->
             <TabControl x:Name="TabControlName" Grid.Column="0" Background="LightGray">
-                <TabItem BorderThickness="1,1,1,0" BorderBrush="Gray">
+                <TabItem x:Name="ShazamTabItem" BorderThickness="1,1,1,0" BorderBrush="Gray">
                     <TabItem.Header>
                         <TextBlock Text="Shazam" Margin="6,2" />
                     </TabItem.Header>
                     <local:ShazamUserControl DataContext="{Binding .}" />
                 </TabItem>
-                <TabItem BorderThickness="1,1,1,0" BorderBrush="Gray">
+                <TabItem x:Name="MySQLTabItem" BorderThickness="1,1,1,0" BorderBrush="Gray">
                     <TabItem.Header>
                         <TextBlock Text="MySQL" Margin="6,2" />
                     </TabItem.Header>
