--- a/ViewModelsViews/MySQLUserControl.xaml
+++ b/ViewModelsViews/MySQLUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CSharpWpfShazam.MySQLUserControl"
+﻿<UserControl x:Class="CSharpWpfShazam.ViewModelsViews.MySQLUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
