--- a/ViewModelsViews/MainWindow.xaml
+++ b/ViewModelsViews/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"        
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"                
         xmlns:ui="http://schemas.modernwpf.com/2019"        
         xmlns:local="clr-namespace:CSharpWpfShazam.ViewModelsViews"
         mc:Ignorable="d"        
@@ -12,67 +12,23 @@
 
     <Grid Background="#EDEDED">
         <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="70" />
+            <RowDefinition Height="50"/>
             <RowDefinition Height="*" MinHeight="230" />
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
         <!--Top app bar area-->
-        <Border Grid.Row="0" BorderThickness="0,0,0,1" BorderBrush="Black" 
-                IsEnabled="{Binding IsCommandNotBusy}" >
-            <DockPanel Background="{StaticResource ShazamThemeBrush}">
-                <ui:SimpleStackPanel DockPanel.Dock="Left" Orientation="Horizontal">
-                    <TextBlock Text="C# WPF - Identify songs like the popular mobile app Shazam and save song info in Azure SQL DB via REST API or in local MySQL DB" FontSize="20" FontWeight="SemiBold" Background="Transparent"
-                                HorizontalAlignment="Left" VerticalAlignment="Center" Margin="15,0,0,0" />
-                </ui:SimpleStackPanel>
-            </DockPanel>
-        </Border>
-
-        <!--Listen to device or Cancel / status row-->
-        <Border Grid.Row="1" Grid.ColumnSpan="2" Background="LightGray" BorderThickness="0,0,0,3" BorderBrush="{StaticResource ShazamThemeBrush}" >
-            <Grid Margin="0,15,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="40" />
-                </Grid.ColumnDefinitions>
-
-                <Button Grid.Column="0" Content="{Binding ListenButtonText}" Command="{Binding ListenOrCancelCommand}" 
-                            IsEnabled="{Binding IsListenButonEnabled}" ToolTip="Listen to a selected device" 
-                            Style="{StaticResource ShazamButtonStyle}" FontSize="22" Margin="15,0,0,0" />
-                <ComboBox Grid.Column="1" IsEnabled="{Binding IsCommandNotBusy}" Height="35"
-                            ItemsSource="{Binding DeviceSettingList}" SelectedItem="{Binding SelectedDeviceSetting}"                            
-                            ToolTip="Hint: select a device with 'speaker' or 'microphone'"  Margin="15,2,0,5" />
-                <ui:AppBarButton Grid.Column="2" Icon="Refresh" ToolTip="Reload device list" 
-                                 Command="{Binding ReloadDeviceListCommand}" IsEnabled="{Binding IsCommandNotBusy}"
-                                 Width="40" Height="40" FontWeight="SemiBold" Margin="5,0,0,0"/>
-                <!--StatusMessage-->
-                <StackPanel Grid.Column="3" Orientation="Horizontal">
-                    <Border BorderBrush="Gray" BorderThickness="1,0,0,0" Margin="5,5,0,20" />
-                    <TextBlock Text="{Binding StatusMessage}" ToolTip="{Binding StatusMessage}" 
-                               FontSize="18" FontWeight="SemiBold" Margin="15,8,0,20">
-                        <TextBlock.Style>
-                            <Style TargetType="{x:Type TextBlock}">
-                                <Style.Triggers>
-                                    <DataTrigger Binding="{Binding IsErrorStatusMessage}" Value="True">
-                                        <Setter Property="Foreground" Value="Red"/>
-                                    </DataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </TextBlock.Style>
-                    </TextBlock>
-                </StackPanel>
-                <!--Using BooleanToVisibilityConverter here for Visibility is unnecessary because IsActive will take care of visible/invisible.
-                    Plus, BooleanToVisibilityConverter's Collapsed-to-Visible will not always work.-->
-                <ui:ProgressRing Grid.Column="4" IsActive="{Binding IsProgressOn}" Foreground="Green" 
-                                Height="20" Width="20" Margin="10,0,0,10" />
-            </Grid>
+        <Border Grid.Row="0" BorderThickness="0,1,0,1" BorderBrush="Black" IsEnabled="{Binding IsCommandNotBusy}" >
+            <ui:SimpleStackPanel Orientation="Horizontal" Background="{StaticResource ShazamThemeBrush}">
+                <TextBlock Text="C# WPF Shazam - " FontSize="18" FontWeight="SemiBold" Foreground="White" 
+                            VerticalAlignment="Center" Margin="15,0,0,0" />
+                <TextBlock Text="Identify songs like the popular mobile app Shazam plus Azure SQL DB / REST API / MySQL" 
+                            FontSize="18" Foreground="White" VerticalAlignment="Center" />
+            </ui:SimpleStackPanel>
         </Border>
 
         <!--Tab control and song info section-->
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" MinWidth="400" />
                 <!--Must be Auto and no MinWidth for Expand/Collapse button to work-->
@@ -81,26 +37,36 @@
                 <ColumnDefinition Width="18" />
             </Grid.ColumnDefinitions>
 
-            <!--Tab control-->
-            <TabControl x:Name="TabControlName" Grid.Column="0" Background="LightGray">
-                <TabItem x:Name="ShazamTabItem" BorderThickness="1,1,1,0" BorderBrush="Gray">
-                    <TabItem.Header>
-                        <TextBlock Text="Shazam" Margin="6,2" />
-                    </TabItem.Header>
-                    <local:ShazamUserControl DataContext="{Binding .}" />
-                </TabItem>
-                <TabItem x:Name="AzureTabItem" BorderThickness="1,1,1,0" BorderBrush="Gray">
-                    <TabItem.Header>
-                        <TextBlock Text="Azure" Margin="6,2" />
-                    </TabItem.Header>
-                    <local:AzureUserControl DataContext="{Binding .}" />
-                </TabItem>
-                <TabItem x:Name="MySQLTabItem" BorderThickness="1,1,1,0" BorderBrush="Gray">
-                    <TabItem.Header>
-                        <TextBlock Text="MySQL" Margin="6,2" />
-                    </TabItem.Header>
-                    <local:MySQLUserControl DataContext="{Binding .}" />
-                </TabItem>
+            <TabControl x:Name="TabControlName" TabStripPlacement="Top">
+                <TabControl.Items>
+                    <TabItem  x:Name="ShazamTabItem" BorderThickness="1,1,1,0" BorderBrush="Gray">
+                        <TabItem.Header>
+                            <TextBlock Text="Shazam" Margin="6,2" />
+                        </TabItem.Header>
+                        <ui:TabItemHelper.Icon>
+                            <ui:BitmapIcon UriSource="/Assets/shazam.png" ShowAsMonochrome="False" />
+                        </ui:TabItemHelper.Icon>
+                        <local:ShazamUserControl DataContext="{Binding .}" />
+                    </TabItem>
+                    <TabItem x:Name="AzureTabItem" BorderThickness="1,1,1,0" BorderBrush="Gray">
+                        <TabItem.Header>
+                            <TextBlock Text="Azure" Margin="6,2" />
+                        </TabItem.Header>
+                        <ui:TabItemHelper.Icon>
+                            <ui:BitmapIcon UriSource="/Assets/azure.png" ShowAsMonochrome="False" />
+                        </ui:TabItemHelper.Icon>
+                        <local:AzureUserControl DataContext="{Binding .}" />
+                    </TabItem>
+                    <TabItem x:Name="MySQLTabItem" BorderThickness="1,1,1,0" BorderBrush="Gray">
+                        <TabItem.Header>
+                            <TextBlock Text="MySQL" Margin="6,2" />
+                        </TabItem.Header>
+                        <ui:TabItemHelper.Icon>
+                            <ui:BitmapIcon UriSource="/Assets/database.png" ShowAsMonochrome="False" />
+                        </ui:TabItemHelper.Icon>
+                        <local:MySQLUserControl DataContext="{Binding .}" />
+                    </TabItem>
+                </TabControl.Items>
             </TabControl>
 
             <!--Song info (MaxWidth below is the actual width because of SongInfoSectionVisibility)-->
@@ -141,8 +107,8 @@
                         Command="{Binding ExpandOrCollapseSongInfoSectionCommand}" ToolTip="Expand / Collapse song info pane"
                         Height="50" Background="Transparent" Margin="5,0,0,0">
                     <Button.Resources>
-                        <Polygon x:Key="PolygonRight" Points="0,0,0,40,10,20" Fill="#1e70ca" Margin="0,0,3,0" />
-                        <Polygon x:Key="PolygonLeft" Points="10,0,10,40,0,20" Fill="#1e70ca" Margin="0,0,3,0"/>
+                        <Polygon x:Key="PolygonRight" Points="0,0,0,40,10,20" Fill="#FF0063B1" Margin="0,0,3,0" />
+                        <Polygon x:Key="PolygonLeft" Points="10,0,10,40,0,20" Fill="#FF0063B1" Margin="0,0,3,0"/>
                         <SolidColorBrush x:Key="MouseOverBackground" Color="Red"/>
                     </Button.Resources>
                     <Button.Style >
@@ -179,5 +145,29 @@
             </Grid>
 
         </Grid>
+
+        <!--StatusMessage-->
+        <Border Grid.Row="2" BorderThickness="0,3,0,0" BorderBrush="{StaticResource ShazamThemeBrush}">
+            <Border.Background>
+                <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+                    <GradientStop Color="#FFF2F2F2" Offset="0.0" />
+                    <GradientStop Color="#FFE6E6E6" Offset="0.25" />
+                    <GradientStop Color="#FFCCCCCC" Offset="0.75" />
+                    <GradientStop Color="LightGray" Offset="1.0" />
+                </LinearGradientBrush>
+            </Border.Background>
+            <TextBlock Text="{Binding StatusMessage}" ToolTip="{Binding StatusMessage}" 
+                        FontSize="18" FontWeight="SemiBold" Margin="15,10,0,0">
+                <TextBlock.Style>
+                    <Style TargetType="{x:Type TextBlock}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsErrorStatusMessage}" Value="True">
+                                <Setter Property="Foreground" Value="Red"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBlock.Style>
+            </TextBlock>
+        </Border>
     </Grid>
 </Window>
