--- a/ViewModelsViews/MySQLUserControl.xaml
+++ b/ViewModelsViews/MySQLUserControl.xaml
@@ -2,55 +2,59 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"              
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"                     
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="#EDEDED">
         <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="70"/>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="375" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
             <Button Content="Delete from MySQL" Command="{Binding DeleteMySQLCommand}" IsEnabled="{Binding IsDeleteMySQLEnabled}"
-                    ToolTip="Delete selected song info from local MySQL DB" Style="{StaticResource ShazamButtonStyle}"
-                    Margin="10,15,0,0" />
-            <Button Content="{Binding SwitchModeButtonText}" Command="{Binding SwitchModeCommand}" 
-                    Style="{StaticResource ShazamButtonStyle}" Margin="20,15,0,0" />
-            <TextBlock Text="{Binding SwitchModeDescriptionText}" Margin="10,20,0,0" />
+                    ToolTip="Delete selected song info from local MySQL DB" Margin="15,0,0,0" />
+            <Button Content="{Binding SwitchModeButtonText}" Command="{Binding SwitchModeCommand}" Margin="20,0,0,0" />
+            <TextBlock Text="{Binding SwitchModeDescriptionText}" Margin="15,23,0,0" />
         </StackPanel>
-        <DataGrid Grid.Row="1" Grid.Column="0" ItemsSource="{Binding SongInfoListFromMySQL}" SelectedItem="{Binding SelectedSongInfoFromMySQL}"  
+        <Border Grid.Row="1" BorderThickness="0,3,0,0" BorderBrush="{StaticResource ShazamThemeBrush}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="295" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <DataGrid ItemsSource="{Binding SongInfoListFromMySQL}" SelectedItem="{Binding SelectedSongInfoFromMySQL}"  
                     IsEnabled="{Binding IsCommandNotBusy}" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="10,0,10,10">
-            <DataGrid.Columns>
-                <DataGridTemplateColumn Header="Song" Width="340">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <!--Need Grid (not StackPanel) for TextBlock to wrap-->
-                            <Grid Background="#19000000">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="120" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                
-                                <Ellipse Height="100" Width="100" Margin="10">
-                                    <Ellipse.Fill>
-                                        <ImageBrush ImageSource="{Binding CoverUrl, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
-                                    </Ellipse.Fill>
-                                </Ellipse>
-                                <StackPanel Grid.Column="1">
-                                    <TextBlock Text="{Binding .}" TextWrapping="Wrap" FontSize="20" Padding="5,2" Margin="5,7,5,0" />
-                                </StackPanel>
-                            </Grid>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-            </DataGrid.Columns>
-        </DataGrid>
-        <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding MySQLWebView2Control}" IsEnabled="{Binding IsCommandNotBusy}" />
+                    ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="5">
+                    <DataGrid.Columns>
+                        <DataGridTemplateColumn Header="Song" Width="270">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <!--Need Grid (not StackPanel) for TextBlock to wrap-->
+                                    <Grid Background="#19000000">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="100" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+                                        
+                                        <Ellipse Height="80" Width="80" Margin="10">
+                                            <Ellipse.Fill>
+                                                <ImageBrush ImageSource="{Binding CoverUrl, TargetNullValue={x:Null}}" Stretch="UniformToFill" />
+                                            </Ellipse.Fill>
+                                        </Ellipse>
+                                        <StackPanel Grid.Column="1">
+                                            <TextBlock Text="{Binding .}" TextWrapping="Wrap" FontSize="18" 
+                                                       Padding="5,2" Margin="3" />
+                                        </StackPanel>
+                                    </Grid>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+                <ContentControl Grid.Column="1" Content="{Binding MySQLWebView2Control}" IsEnabled="{Binding IsCommandNotBusy}" />
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
