--- a/ViewModelsViews/MainWindow.xaml
+++ b/ViewModelsViews/MainWindow.xaml
@@ -22,7 +22,7 @@
             <ui:SimpleStackPanel Orientation="Horizontal" Background="{StaticResource ShazamThemeBrush}">
                 <TextBlock Text="C# WPF Shazam - " FontSize="18" FontWeight="SemiBold" Foreground="White" 
                             VerticalAlignment="Center" Margin="15,0,0,0" />
-                <TextBlock Text="Identify songs like the popular mobile app Shazam plus Azure SQL DB / REST API / MySQL" 
+                <TextBlock Text="Identify songs like the popular mobile app Shazam plus Azure SQL DB / Web API / MySQL" 
                             FontSize="18" Foreground="White" VerticalAlignment="Center" />
             </ui:SimpleStackPanel>
         </Border>
